# CANDOR-Bench

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CICD_FIXES.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  README.zh-CN.md  REPRODUCE.md  STRUCTURE.md  __init__.py  __main__.py  activate.sh  build_PyCANDY.sh  build_cpu_only.sh  build_with_cuda.sh  compute_gt.py  conftest.py  deploy.sh  docker-compose.yml  export_results.py  install.sh  mem_trace.csv  plot_insert_qps.py  prepare_dataset.py  pyproject.toml  pytest.ini  requirements.txt  run_benchmark.py  run_gamma.sh  setup.cfg  setup.py  setup_new_server.sh
algorithms_impl/: CMakeLists.txt  README.md  build.sh  build_all.sh  setup.py
algorithms_impl/DiskANN/: CMakeLists.txt
algorithms_impl/SPTAG/: CMakeLists.txt
algorithms_impl/bindings/: PyCANDY.cpp
algorithms_impl/candy/: HNSWNaiveIndex.cpp  HNSWNaiveIndex.h  IndexTable.cpp
algorithms_impl/hnswlib/: hnswlib_c_api.cpp
bench/: CMakeLists.txt  README.md  __init__.py  cache_profiler.py  clean_files.sh  config_dev_causefilter_test.yaml  config_lr_sweep.yaml  config_m2_deep1m.yaml  config_m2_gist.yaml  config_m2_gist2.yaml  config_m2_sweep.yaml  config_mvcc_overhead.yaml  config_sigmod_annchor_sift_ch_full.yaml  config_sigmod_hnsw_sift_ch_full.yaml  gamma_experiment.py  gen_locality_queries.py  go.mod  go.sum  io_utils.py  main.go  maintenance.py  metrics.py  monitor_progress.sh  monitor_results.sh  run.sh  run_10m_rerun.sh  run_adaptive_sweep.sh  run_all_rerun.sh  run_lazy_recovery_sweep.sh  run_lock_scalability.sh  run_m2_full_sweep.sh  run_overall.sh  run_perf.sh  run_perf_ch.sh  run_perf_compare.sh  run_perf_exp.sh  run_remaining.sh  run_reorder.sh  run_revision_matrix.sh  run_saturate.sh  (+6 more)
bench/algorithms/: README.md  __init__.py  base.py  index.hpp  index_cgo.cpp  index_cgo.hpp  registry.py
bench/cmd/: compact_bench.cpp
bench/configs/: adaptive_cc_sweep.yaml  chasing_baseline.yaml  chasing_dir_a_sharing.yaml  chasing_dir_ab_combined.yaml  chasing_dir_b_warmstart.yaml  dir_a_baseline.yaml  dir_a_search_sharing.yaml  dir_b_warm_start.yaml  eqr_locality_mvcc.yaml  eqr_locality_nolock.yaml  measure_overlap.yaml  mvcc_batch20_rerun.yaml  mvcc_mep_test.yaml  mvcc_vs_nodelock_a_efsweep.yaml  mvcc_vs_nodelock_b_gist.yaml  mvcc_vs_nodelock_b_gist_rerun.yaml  mvcc_vs_nodelock_c_writepressure.yaml  mvcc_vs_nolock_b2000_repeat.yaml  mvcc_vs_nolock_batchsweep.yaml  mvcc_vs_nolock_highwrite.yaml  mvcc_vs_nolock_random.yaml  mvcc_vs_nolock_threads.yaml  nolock_baseline_random.yaml  perf_mvcc_only.yaml  perf_nolock_only.yaml  random_h1_mvcc_writepressure.yaml  random_h2_search_sharing.yaml  random_h3_graph_quality.yaml  sift10m_concurrent.yaml  sift10m_concurrent_mvcc.yaml  sift10m_lock.yaml  sift10m_mvcc.yaml  sift10m_mvcc_test.yaml  sift10m_scaling.yaml  th_highwrite_mvcc.yaml  th_highwrite_nolock.yaml  th_mvcc_32.yaml  th_mvcc_32_unlim.yaml  th_mvcc_64.yaml  th_nolock_32.yaml  (+10 more)
bench/configs_v2/: dir_a_baseline_gist.yaml  dir_a_baseline_sift.yaml  dir_a_sharing_gist.yaml  dir_a_sharing_sift.yaml  dir_b_warmstart_gist.yaml  dir_b_warmstart_sift.yaml
bench/docs/: EUL-DP.md
bench/internal/: benchmark.go  compare.go  config.go  incremental_gt.go  index.go  index_factory.go  m2_fresh_merge_test.go  output.go  producer.go  producer_schedule.go  public_api.go  query_mode.go  replica.go  results.go  run.go  run_midinsert_env_test.go  utils.go
bench/scenarios/: CHURN_SWEEP_RESULTS.md  COMPLETE_RESULTS.md  SCENARIO_RESULTS.md  SIFT1M_RESULTS.md  SIFT1M_RESULTS_V2.md  aggregate_scenarios.py  churn_sweep.py  scenario_bench.py  sift1m_bench.py  sift1m_bench_full1m.py  sift1m_bench_v2.py  smart_routing_ab.py
bench/scripts/: analyze_budget_sweep.py  analyze_diagnostic_1_2.py  analyze_graph_quality_drift.py  analyze_hnsw_c2c_address_attribution_20260513.py  analyze_hnsw_insert_search_rootcause_20260513.py  analyze_hnsw_plain_tail_rootcause_20260510.py  analyze_m2_external_rwlock_bpfcc_20260508.py  analyze_m2_node_lock_cause_matrix_20260507.py  analyze_m2_node_lock_hardware_matrix_20260507.py  analyze_m2_optimize.py  analyze_m2_tail_causality_matrix_20260508.py  analyze_m3_anns_controlled_residual.py  analyze_m3_bandwidth_audit_20260512.py  analyze_m3_batch_diag_rootcause.py  analyze_m3_cache_phase_controls.py  analyze_m3_cause12_validation.py  analyze_m3_clean_search_mechanism_20260512.py  analyze_m3_efc200_chain_20260504.py  analyze_m3_efc200_hardware_20260504.py  analyze_m3_efc200_searchwork_20260504.py  analyze_m3_fluctuation_rootcause.py  analyze_m3_graph_write_probe_20260504.py  analyze_m3_high_recall_searchstage_20260504.py  analyze_m3_insert_burst_alignment.py  analyze_m3_insert_component_attribution.py  analyze_m3_list_phase_trace.py  analyze_m3_lowq_phase_attribution.py  analyze_m3_mixed_path_locality_20260508.py  analyze_m3_mutation_spike_alignment.py  analyze_m3_positive_correlation_20260504.py  analyze_m3_prune_only_tail_matrix_20260508.py  analyze_m3_query_hardness_batch_driver_20260508.py  analyze_m3_raw_search_duration_20260512.py  analyze_m3_readwrite_matched_latency_20260506.py  analyze_m3_rw_tail_causality_20260512.py  analyze_m3_rw_tail_latency_20260512.py  analyze_m3_search_cpu_pinning_controls_20260508.py  analyze_m3_search_phase_overlap.py  analyze_m3_search_stage_rootcause_20260504.py  analyze_m3_steady_pressure_buckets.py  (+167 more)
bench/tools/: rwlock_probe.c
plugins/streamseed/: README.md  pyproject.toml
src/index/: CMakeLists.txt  abstract_index.cpp  bucketed_flat_index.cpp  buffered_congestion_drop_index.cpp  candor_object.cpp  congestion_drop_index.cpp  distributed_partition_index.cpp  dpg_index.cpp  faiss_index.cpp  flann_index.cpp  flat_ammip_index.cpp  flat_ammip_obj_index.cpp  flat_gpu_index.cpp  flat_index.cpp  hnsw_naive_index.cpp  index_table.cpp  legacy_concurrent_index.cpp  lshapg_index.cpp  pq_index.cpp  (+8 more)
test/: CMakeLists.txt
utils/: CMakeLists.txt  IDEA_SLIDES.md  README_GT_SLICES.md  calc_recall_distribution.cpp  compute_gt.cpp  compute_incr_gt.cpp  knn_processor.cpp  knn_processor.h  utils.hpp
(+927 files in other folders)
