[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "streamseed"
version = "0.1.0"
description = "StreamSeed plugin: adaptive query-hint control for dynamic ANNS"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "CANDOR-Bench Contributors" }
]
dependencies = [
  "numpy>=1.23"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
pycandy = ["PyCANDYAlgo"]

[tool.hatch.build.targets.wheel]
packages = ["src/streamseed"]
